# ConfusableMatcher

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Config.h.in  ConfusableMatcher.cpp  ConfusableMatcher.def  ConfusableMatcher.h  ConfusableMatcherData.cpp  Debugging.h  Export.cpp  Export.h  MatchingState.h  README.md  Shared.h
.github/workflows/: build.yml
Fuzzing/: Main.cpp
Fuzzing/Tests/: 1  10  11  2  3  4  5  6  7  8  9
UnitTests/: Benchmark.cpp  CMakeLists.txt  TestCases.cpp  UnitTest.h  UnitTests.cpp  UnitTests.h
